--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
     "@prisma/client": "^5.10.2",
     "next": "14.1.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.0.1"
   },
   "devDependencies": {
     "@types/node": "^20.11.25",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
+    "autoprefixer": "^10.4.19",
+    "daisyui": "^4.9.0",
     "eslint": "^8",
     "eslint-config-next": "14.1.3",
     "postcss": "^8",
