--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "@prisma/client": "^5.10.2",
+    "animate.css": "^4.1.1",
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.0.1"
+    "react-dropzone": "^14.2.3",
+    "react-icons": "^5.0.1",
+    "react-stl-viewer": "^2.5.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.25",
