--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
     "react-icons": "^5.0.1",
-    "react-stl-viewer": "^2.5.0"
+    "react-stl-viewer": "^2.5.0",
+    "sharp": "^0.33.3"
   },
   "devDependencies": {
     "@types/node": "^20.11.25",
