--- a/package.json
+++ b/package.json
@@ -10,17 +10,21 @@
   },
   "dependencies": {
     "@prisma/client": "^5.10.2",
+    "animate.css": "^4.1.1",
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.0.1"
+    "react-dropzone": "^14.2.3",
+    "react-icons": "^5.0.1",
+    "react-stl-viewer": "^2.5.0",
+    "sharp": "^0.33.3"
   },
   "devDependencies": {
     "@types/node": "^20.11.25",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.19",
-    "daisyui": "^4.9.0",
+    "daisyui": "^4.10.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.3",
     "postcss": "^8",
