--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "start": "next start",
     "lint": "next lint",
     "postinstall": "prisma generate"
-
   },
   "dependencies": {
     "@prisma/client": "^5.13.0",
@@ -23,7 +22,8 @@
     "react-dropzone": "^14.2.3",
     "react-icons": "^5.0.1",
     "react-stl-viewer": "^2.5.0",
-    "sharp": "^0.33.3"
+    "sharp": "^0.33.3",
+    "sweetalert2": "^11.10.8"
   },
   "devDependencies": {
     "@types/node": "^20.11.25",
