--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
     "react-icons": "^5.0.1",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-stl-viewer": "^2.5.0",
     "sharp": "^0.33.3",
-    "sweetalert2": "^11.10.8"
+    "sweetalert2": "^11.6.13"
   },
   "devDependencies": {
     "@types/node": "^20.11.25",
