--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
+    "lint:fix": "next lint --fix",
+    "lint:strict": "next lint '*/**/*.{js,jsx,ts,tsx}'",
+    "prettier": "prettier --write */**/*.{js,jsx,json,ts,tsx,scss,css,md}",
     "postinstall": "prisma generate"
   },
   "dependencies": {
@@ -15,8 +18,15 @@
     "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/ssr": "^0.1.0",
     "@supabase/supabase-js": "^2.42.0",
+    "@typescript-eslint/eslint-plugin": "^7.8.0",
+    "@typescript-eslint/parser": "^7.8.0",
     "animate.css": "^4.1.1",
+    "eslint-config-next": "^14.2.3",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "next": "14.1.3",
+    "prettier": "^3.2.5",
+    "prettier-plugin-tailwindcss": "^0.5.14",
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
@@ -32,8 +42,7 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.19",
     "daisyui": "^4.10.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.3",
+    "eslint": "^8.57.0",
     "postcss": "^8",
     "prisma": "^5.13.0",
     "tailwindcss": "^3.3.0",
