--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "start": "next start",
     "lint": "next lint",
     "postinstall": "prisma generate"
-
   },
   "dependencies": {
     "@prisma/client": "^5.13.0",
@@ -18,12 +17,16 @@
     "@supabase/supabase-js": "^2.42.0",
     "animate.css": "^4.1.1",
     "next": "14.1.3",
+    "prettier": "^3.2.5",
+    "prettier-plugin-tailwindcss": "^0.5.14",
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
     "react-icons": "^5.0.1",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-stl-viewer": "^2.5.0",
-    "sharp": "^0.33.3"
+    "sharp": "^0.33.3",
+    "sweetalert2": "^11.6.13"
   },
   "devDependencies": {
     "@types/node": "^20.11.25",
@@ -31,8 +34,6 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.19",
     "daisyui": "^4.10.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.3",
     "postcss": "^8",
     "prisma": "^5.13.0",
     "tailwindcss": "^3.3.0",
