--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@supabase/ssr": "^0.1.0",
     "@supabase/supabase-js": "^2.42.0",
     "animate.css": "^4.1.1",
+    "formidable": "^3.5.1",
     "next": "14.1.3",
+    "node-stl": "^0.7.3",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "react": "^18",
@@ -29,6 +31,7 @@
     "sweetalert2": "^11.6.13"
   },
   "devDependencies": {
+    "@types/formidable": "^3.4.5",
     "@types/node": "^20.11.25",
     "@types/react": "^18",
     "@types/react-dom": "^18",
