--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@supabase/supabase-js": "^2.42.0",
     "animate.css": "^4.1.1",
     "formidable": "^3.5.1",
+    "imagekit": "^5.0.1",
     "next": "14.1.3",
     "node-stl": "^0.7.3",
     "prettier": "^3.2.5",
