--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@supabase/supabase-js": "^2.42.0",
     "animate.css": "^4.1.1",
     "formidable": "^3.5.1",
+    "jszip": "^3.10.1",
     "imagekit": "^5.0.1",
     "next": "14.1.3",
     "node-stl": "^0.7.3",
@@ -33,6 +34,7 @@
   },
   "devDependencies": {
     "@types/formidable": "^3.4.5",
+    "@types/jszip": "^3.4.1",
     "@types/node": "^20.11.25",
     "@types/react": "^18",
     "@types/react-dom": "^18",
