--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "@prisma/client": "^5.13.0",
@@ -17,8 +19,8 @@
     "@supabase/supabase-js": "^2.42.0",
     "animate.css": "^4.1.1",
     "formidable": "^3.5.1",
-    "jszip": "^3.10.1",
     "imagekit": "^5.0.1",
+    "jszip": "^3.10.1",
     "next": "14.1.3",
     "node-stl": "^0.7.3",
     "prettier": "^3.2.5",
@@ -30,16 +32,22 @@
     "react-infinite-scroll-component": "^6.1.0",
     "react-stl-viewer": "^2.5.0",
     "sharp": "^0.33.3",
-    "sweetalert2": "^11.6.13"
+    "sweetalert2": "^11.6.13",
+    "ts-jest": "^29.1.3"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.4.5",
+    "@testing-library/react": "^15.0.7",
     "@types/formidable": "^3.4.5",
+    "@types/jest": "^29.5.12",
     "@types/jszip": "^3.4.1",
     "@types/node": "^20.11.25",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.19",
     "daisyui": "^4.10.1",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8",
     "prisma": "^5.13.0",
     "tailwindcss": "^3.3.0",
