--- a/package.json
+++ b/package.json
@@ -4,27 +4,44 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@prisma/client": "^5.10.2",
+    "@prisma/client": "^5.13.0",
+    "@supabase/auth-ui-react": "^0.4.7",
+    "@supabase/auth-ui-shared": "^0.1.8",
+    "@supabase/ssr": "^0.1.0",
+    "@supabase/supabase-js": "^2.42.0",
+    "animate.css": "^4.1.1",
+    "formidable": "^3.5.1",
+    "jszip": "^3.10.1",
+    "imagekit": "^5.0.1",
     "next": "14.1.3",
+    "node-stl": "^0.7.3",
+    "prettier": "^3.2.5",
+    "prettier-plugin-tailwindcss": "^0.5.14",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.0.1"
+    "react-dropzone": "^14.2.3",
+    "react-icons": "^5.0.1",
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-stl-viewer": "^2.5.0",
+    "sharp": "^0.33.3",
+    "sweetalert2": "^11.6.13"
   },
   "devDependencies": {
+    "@types/formidable": "^3.4.5",
+    "@types/jszip": "^3.4.1",
     "@types/node": "^20.11.25",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.19",
-    "daisyui": "^4.9.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.3",
+    "daisyui": "^4.10.1",
     "postcss": "^8",
-    "prisma": "^5.10.2",
+    "prisma": "^5.13.0",
     "tailwindcss": "^3.3.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.2"
